Fixed a bug where the fix for the volume would cause music loops to stop working Made the default music fadespeed faster Added some interior textures

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -27076,6 +27076,9 @@
     <Content Include="Content\Data\Scripts\PokeCenter_script.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Data\Scripts\Hoenn\Cities\Littleroot\Main_MapScript.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="LICENSE" />
     <None Include="meta">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
