--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -28626,6 +28626,7 @@
     <Compile Include="Resources\Models\Cliffs\CliffInsideModel.vb" />
     <Compile Include="Resources\Models\Cliffs\CliffModel.vb" />
     <Compile Include="Resources\Models\Other\SignModel.vb" />
+    <Compile Include="Resources\Models\Steps\OutsideStepModel.vb" />
     <Compile Include="Resources\Models\Steps\InsideStepModel.vb" />
     <Compile Include="Resources\Models\Steps\StepModel.vb" />
     <Compile Include="Resources\Sound\MusicManager.vb" />
