Fixed some errors in variable names and some token files Improved Professor Birch's OverworldSprite by basing it on the body of a fat guy instead of a regular scientist Made sure when scaling text, that the position is always an integer (a whole number with no decimals) so the pixels don't appear weird The GUI now shrinks to half its size when the window is smaller than 1152x864 instead of 800x620 Updated the display of the gamejolt emblem in the main menu Added a genderless symbol for online saves Fixed PlayerSkin textures not being loaded from the right folder when in offline multiplayer Fixed the following Pokémon textures not being displayed correctly when in multiplayer Updated the PkMnExp3D GameMode description Removed chatfont and some OverworldSprites I've missed

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -10842,7 +10842,7 @@
     <Content Include="Content\Textures\OverworldSprites\Beauty.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\OverworldSprites\biker.png">
+    <Content Include="Content\Textures\OverworldSprites\Biker.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\OverworldSprites\BirdKeeper.png">
@@ -10860,7 +10860,7 @@
     <Content Include="Content\Textures\OverworldSprites\BlueShirtGuy.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\OverworldSprites\boarder.png">
+    <Content Include="Content\Textures\OverworldSprites\Boarder.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\OverworldSprites\Bouncer.png">
@@ -10878,13 +10878,13 @@
     <Content Include="Content\Textures\OverworldSprites\BugManiac.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\OverworldSprites\burglar.png">
+    <Content Include="Content\Textures\OverworldSprites\Burglar.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\OverworldSprites\Cameraman.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\OverworldSprites\camper.png">
+    <Content Include="Content\Textures\OverworldSprites\Camper.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\OverworldSprites\Captain.png">
@@ -10950,7 +10950,7 @@
     <Content Include="Content\Textures\OverworldSprites\FatGuy.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\OverworldSprites\firebreather.png">
+    <Content Include="Content\Textures\OverworldSprites\Firebreather.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\OverworldSprites\Fisherman.png">
@@ -11271,13 +11271,7 @@
     <Content Include="Content\Textures\OverworldSprites\Medium.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\OverworldSprites\misty.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\Textures\OverworldSprites\Mom.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\Textures\OverworldSprites\Morty.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\OverworldSprites\MrStone.png">
