--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -10626,7 +10626,13 @@
     <Content Include="Content\Sounds\Use_Repel.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Sounds\Enter.wav">
+    <Content Include="Content\Sounds\Warp_Exit.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sounds\Warp_RegularDoor.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sounds\Warp_SlideDoor.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Textures\BattleFactory.png">
